fixed width of introduction section overflowing on mobile

--- a/src/styles/LandingFrame.module.css
+++ b/src/styles/LandingFrame.module.css
@@ -164,7 +164,7 @@ body {
   font-size: 20px;
 }
 .frameContainer {
-  width: 471px;
+  /* width: 471px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -173,8 +173,9 @@ body {
 }
 .frameChild {
   width: 438px;
+  max-width: 100%;
   position: relative;
-  height: 482px;
+  /* height: 482px; */
   object-fit: cover;
 }
 .frameGroup {
